--- a/5 JavaScript/examples/vue-components/index.html
+++ b/5 JavaScript/examples/vue-components/index.html
@@ -13,7 +13,7 @@
         <h1>{{ libraryName }}</h1>
 
         <template v-for="book in books">
-            <book v-bind:title="book.title" v-bind:author="book.author"></book>
+            <book-item v-bind:title="book.title" v-bind:author="book.author" v-bind:key="book.title"></book-item>
         </template>
 
         <!-- <counter></counter>
