--- a/code/teyon/javascript/lab03p2.html
+++ b/code/teyon/javascript/lab03p2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="lab03b.js" defer></script>
+    <script src="lab03p2.js" defer></script>
 </head>
 <body>
     <input type="text" id="useramount" placeholder="Enter Amount">
