--- a/5 JavaScript/examples/vue-components/index.html
+++ b/5 JavaScript/examples/vue-components/index.html
@@ -12,13 +12,12 @@
     <div id="app">
         <h1>{{ libraryName }}</h1>
 
-        <template v-for="book in books">
-            <book v-bind:title="book.title" v-bind:author="book.author"></book>
-        </template>
+        <!-- catch emitted events on the component -->
+        <!-- <counter v-on:emitted-event="pCount++"></counter> {{ pCount }} -->
 
-        <!-- <counter></counter>
-        <counter></counter>
-        <counter></counter> -->
+        <template v-for="book in books">
+            <book-item v-on:delete-book="removeBook" v-bind:book="book" v-bind:key="book.id"></book-item>
+        </template>
 
     </div>
 </body>
