for real this time, done

--- a/code/cesar/js/lab_06/index.html
+++ b/code/cesar/js/lab_06/index.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab_06 Cesar Rebolledo</title>
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="./app.js" defer></script>
+
     <div id="app" >
         <h1>Quotes API</h1>
         <h2>Instructions:</h2>
@@ -23,27 +21,25 @@
             <lable>Tag</lable>
             <select id="type"  v-model="type">
             <option value="keyword">keyword</option>
-            <option value="tag">tag</option>
             <option value="author">author</option><br>
             </select><br>
             <lable>Keyword</lable>
             <input type="text" v-bind:value="searchTerm" v-on:keyup.enter="search"><br>
             <h2>Results:</h2>
-            <div v-for="q in output" class="q">
-                {{q.quotes}}<br>
-            **********************************<br>
-            **********************************<br>
-
-            <span>
-                {{q.body}} <br> {{q.author}}<br><br>
-            </span>
-
-        </div>
+            <div v-for="q in output">
+                <ul>
+                    {{q.quotes}}
+                ********************************************************************<br>
+                </ul>
+                "{{q.body}}"<br> 
+                --- {{q.author}}<br><br>
+            </div>
 
 
         <b>Page Number:</b>{{page}}
-        <input type="button" v-bind:value="page" v-on:click="nextPage" value="Next" >
+        <input type="button" v-bind:value="page" v-on:click="next" value="Next">
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="./app.js" defer></script>
 </body>
 </html>
