--- a/code/mileidy/javascript/lab_06/index.html
+++ b/code/mileidy/javascript/lab_06/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Todo List</title>
+    <title>Fav Quotes</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <!-- Add your styles here! -->
 </head>
 <body>
     <div id="app">
-        {{ message }}
+        <input type="text" v-model="searchKey" v-on:keyup.enter="filter" placeholder="Enter Key or Author or Tag">
+        <select id="dropdown" v-model="searchType"><option value="key">Keyword</option> <option value="author">Author</option> <option value="tag">Tag</option></select>
+        <br><br>
+        <li v-for="quote in data">{{quote.body}} -{{quote.author}}</li>
+        <button v-bind:value="page"v-on:click="pagination">Next Page</button>
+        <button v-bind:value="page"v-on:click="flip">Previous Page</button>
     </div>
 
     <!-- Include Vue from a CDN of your choice, I chose unpkg -->
