--- a/code/teyon/capstone/capstone.html
+++ b/code/teyon/capstone/capstone.html
@@ -39,7 +39,7 @@
             <button id="submit" v-on:click="getIata">Submit</button>
         </div>           
         
-        <li id="cards"><div 
+        <li v-if="price" id="cards"><div 
             class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Flights</h5>
@@ -52,12 +52,12 @@
         </div>
     </li><br>
     <h2 class="saved">Saved Flights</h2>
-    <li v-for="update in favFlight" class="savedinput"><div 
+    <li v-if="price" class="savedinput"><div 
         class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">Flights</h5>
-            <p class="card-text">Departing: {{update['origin']}} ->
-                Arriving: {{update['destination']}}
+            <p class="card-text">Departing: {{price['origin']}} ->
+                Arriving: {{price['destination']}}
             </p>
             <a href="https://www.priceline.com/?vrid=a02e0d033f17b677eecdacb6a711c10c" class="btn btn-primary" id="priceline">priceline.com</a>
         </div>
@@ -66,7 +66,7 @@
 
 
 </div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBd2qGimvCJwJS8YjNyG18rA8ZrsIJdHT8"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQR4tvBFNHhw9GgWy16Db2hh-GriSCTAw"
 async defer></script>
 <script src="adventure.js" defer type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
