--- a/code/teyon/javascript/lab06.html
+++ b/code/teyon/javascript/lab06.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script>"http://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"</script>
     <script src="lab06.js" defer></script>
 </head>
 <body>
-    <div if="app"></div>
+    <div if="app">
+
+        <H1>Quotes Finder</H1>
+        <input type="text" v-bind:value="find" v-on:keyup.enter="userInput">
+        <select id="type" v-model="type">
+            <option value="author">author</option>
+            <option value="keyword">keyword</option>
+        </select>
+        <input type="button" v-bind:value="page" v-on:click="nextPage" value="Next Page">
+        
+        <div v-for="quote in info" class="quote">
+            {{quote.quotes}}
+            <span class="lighten">
+                <span v-html="quote.body"></span>{{quote.body}} {{quote.author}}
+
+            </span>
+            
+        </div>
+    </div>
 </body>
 </html>
