--- a/code/teyon/javascript/lab06.html
+++ b/code/teyon/javascript/lab06.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script>"http://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"</script>
     <script src="lab06.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js" defer></script>
+    <script>"http://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"</script>
 </head>
 <body>
     <div if="app">
