updated with tag option added

--- a/code/teyon/javascript/lab06.html
+++ b/code/teyon/javascript/lab06.html
@@ -17,6 +17,7 @@
         <select id="type" v-model="type">
             <option value="author">author</option>
             <option value="keyword">keyword</option>
+            <option value="tag">tag</option>
         </select>
         <input type="button" v-bind:value="pages" v-on:click="next" value="Next Page">
         
